[project]
name = "aula01-bootcamp"
version = "3.13.5"
description = ""
authors = [
    {name = "Daniel Carvalho",email = "daniel_ti@live.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
